--- a/app/eu/factorx/citizens/angular/directives/crDouble/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crDouble/template.html
@@ -1,8 +1,7 @@
 <div class="cr-double">
-
-    <input class="form-control cr-double-input"
-           ng-model="ngModel"
-           ng-model-options="{ updateOn: 'blur' }"
-           ng-readonly="ngReadonly"/>
+    <input class="cr-double-input"
+           ng-model="myModel"
+           ng-readonly="ngReadonly"
+        />
 
 </div>
